# hratc2017_entry_template

./: CMakeLists.txt  README.md  husky.rviz  package.xml
examples/cpp/: get_data.cpp  get_global_odom.cpp  pointcloud_generator.cpp  random_walk_navigation.cpp  random_walk_simple.cpp  random_walk_simple.cpp.autosave  read_metal_detector.cpp  set_mine.cpp  sweep.cpp  sweep_robot.cpp  sweep_sim.cpp
examples/py/: control.py  control_extended.py  control_nocamera.py  simple_control.py
launch/: navigation.launch  pointcloud_generator.launch  random_walk.launch
settings/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/: main.cpp
